--- a/config-test.yml
+++ b/config-test.yml
@@ -1,3 +1,2 @@
-信息：这个是测试config
-  
-token : 1957f47fc9c658d77fbdb6868612d3f3ea0a287d
+info：this is test config
+  num : 1957f47fc9c658d77fbdb6868612d3f3ea0a287d
