--- a/config-test.yml
+++ b/config-test.yml
@@ -1,1 +1,1 @@
-info: this is test configb 1957f47fc9c658d77fbdb6868612d3f3ea0a287d
+info: this is test configc 1957f47fc9c658d77fbdb6868612d3f3ea0a287d
